DTSRD-2103: Sorting of Active Orgs Users (#1553)
* DTSRD-2103: Sorting of Active Orgs Users

* DTSRD-2103: Sorting of Active Orgs Users

* DTSRD-2103: Sorting of Active Orgs Users

* DTSRD-2103: Sorting of Active Orgs Users

* DTSRD-2103: Sorting of Active Orgs Users

* DTSRD-2103: Sorting of Active Orgs Users

* DTSRD-2103: fix sonar issues

* DTSRD-2103: Sorting of Active Orgs Users

* DTSRD-2103: Sorting of Active Orgs Users

* DTSRD-2103: Sorting of Active Orgs Users

---------

Co-authored-by: SabinaHMCTS <139119493+SabinaHMCTS@users.noreply.github.com>